added rates table

--- a/rates.html
+++ b/rates.html
@@ -65,14 +65,73 @@
 		<!-- Body header -->
 		<center><h1>Rates</h1></center>
 
+		<p>The following rates are per room, per day. <br/>
+			Visits of longer than 8 days enjoy a 10% discount. <br/>
+			In Season: 1 Dec – 20 Jan, 15 Apr – 30 Apr, 10 Jul – 20 Jul</p>
+
 		<!-- Body content --> 
 		<div id="maincontent" >
-			<!-- break -->
-			</br></br></br></br></br></br>
-			</br></br></br></br></br></br>
-			</br></br></br></br></br></br>
+			<div class="table-responsive">
+				<table class="table table-bordered table-hover">
+					<tr>
+						<th>Room</th>
+						<th>In Season</th>
+						<th></th>
+						<th>Out of Season</th>
+						<th></th>
+						<th>Occupants</th>
+					</tr>
+					<tr>
+						<td></td>
+						<td><strong>Weekend</strong></td>
+						<td><strong>Weekday</strong></td>
+						<td><strong>Weekend</strong></td>
+						<td><strong>Weekday</strong></td>
+						<td><strong></strong></td>
+					</tr>
+					<tr>
+						<td class="currency">Single Room</td>
+						<td class="currency">R	</td>
+						<td class="currency">R	</td>
+						<td class="currency">R	</td>
+						<td class="currency">R 	</td>
+						<td class="currency">1</td>
+					</tr>
+
+					<tr>
+						<td class="currency">Double Room</td>
+						<td class="currency">R	</td>
+						<td class="currency">R	</td>
+						<td class="currency">R	</td>
+						<td class="currency">R	</td>
+						<td class="currency">2</td>
+					</tr>
+					
+					<tr>
+						<td class="currency">Sumptuous Suite</td>
+						<td class="currency">R	</td>
+						<td class="currency">R	</td>
+						<td class="currency">R	</td>
+						<td class="currency">R	</td>
+						<td class="currency">4</td>
+					</tr>
+					
+						<tr>
+						<td class="currency">Family Suite</td>
+						<td class="currency">R	</td>
+						<td class="currency">R	</td>
+						<td class="currency">R	</td>
+						<td class="currency">R	</td>
+						<td class="currency">5</td>
+					</tr>
+	
+				</table>
+				</div>
 		</div>
 
+		<!-- break -->
+		<br/><br/><br/>
+		
 		<!-- footer -->	
 		<div id="footer">
       		<small>
