--- a/login.html
+++ b/login.html
@@ -20,6 +20,20 @@
 	
 	<!-- social media icons -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+	<!-- Form code -->
+	<link rel="stylesheet" href="js/jquery-ui.css" />
+	<script src="js/jquery-1.8.3.js"></script>
+	<script src="js/jquery-ui.js"></script>
+	<script>
+	  $(function() {
+	    $.datepicker.setDefaults({dateFormat: 'dd-mm-yy'});
+	    $( "input.date" ).datepicker();
+	  });
+	</script>
+	
+	<!-- validation -->
+	<script language="javascript" src="js/jquery.validation.js"></script>
 </head>
 
 <body>
@@ -63,11 +77,26 @@
 		
 		<!-- Body content --> 
 		<div id="maincontent" >
-			<!-- break -->
-			</br></br></br></br></br></br>
-			</br></br></br></br></br></br>
-			</br></br></br></br></br></br>
+			<form action="thank-you.html" method="post" id="myform"> 
+				<center><div class="form-group required-field" style="width: 250px;">
+					<input type="input" class="form-control" id="email" placeholder="Email">
+				</div>
+
+				<div class="form-group required-field" style="width: 250px;">	
+					<input type="password" class="form-control" id="password" placeholder="Password">
+				</div>
+				
+  				<div class="form-group">
+					<input name="Submit" type="submit" value="Submit" class="btn btn-primary submit" />
+				</div>
+			
+			<a href="register.html">No account? Register here</a></center>				
+			</form>
 		</div>
+
+		<!-- break -->
+		<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+
 
 		<!-- footer -->	
 		<div id="footer">
