--- a/contact-us.html
+++ b/contact-us.html
@@ -69,9 +69,16 @@
 		<!-- Body content --> 
 		<div id="maincontent" >
 			<!-- break -->
-			</br></br></br></br></br></br>
-			</br></br></br></br></br></br>
-			</br></br></br></br></br></br>
+			<h3>Booking Enquiries</h3>
+			<p>Please submit all enquiries using the <a href="enquiries.html"> enquiries </a> form. </p>
+		</br></br>
+
+		<h3>For all other enquiries contact us </h3>
+			<p><strong>Phone:</strong> 0000000000</p>
+			<p><strong>Email:</strong>cats@meuw.com</p>
+			<p><strong>Address:</strong></p>
+
+			<p>District Six<br>Seale str<br>Cape Town</p>
 		</div>
 
 		<!-- footer -->	
