removed placeholder text

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		
 		<!-- Body header -->
 		<center><h1>Take a Tour!</h1>
-		<h3>placeholder text placeholder text placeholder text placeholder text</h3></center>
+		<h3>placeholder text placeholder text placeholder text</h3></center>
 
 
 		<!--Slideshow -->
