changed  html file to php

--- a/about.html
+++ b/about.html
@@ -28,7 +28,6 @@
  		
 		<!-- Header -->
 		<div id="top" class="row">
-			
 			<!-- Logo -->
 			<div id="logo" class="pull-left">
 			<h1>Grand Hotel</h1>
@@ -36,7 +35,7 @@
 
 			<!--Booking Button-->
 			<div id="bookings" class="pull-right">
-				<a href="reservations.html" class="btn btn-primary">Book Now</a>
+				<a href="reservations.php" class="btn btn-primary">Book Now</a>
 			</div>
 		</div>
 
@@ -54,9 +53,9 @@
 					<ul class="nav navbar-nav">
 						<li><a href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
-						<li><a href="reservations.html">Reservations</a></li>
+						<li><a href="reservations.php">Reservations</a></li>
 						<li><a href="rates.html">Rates</a></li>
-						<li><a href="enquiries.html">Enquiries</a></li>
+						<li><a href="enquiries.php">Enquiries</a></li>
 						<li><a href="contact-us.html">Contact Us</a></li>
 					</ul>
 				</div>
