updated nav bar links

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
 			<!--Login and Register buttons-->
 			<div id="bookings" class="pull-right">
-				<a href="login.html" class="btn btn-primary">Login</a>
-				<a href="register.html" class="btn btn-primary">Register</a>
+				<a href="login.php" class="btn btn-primary">Login</a>
+				<a href="register.php" class="btn btn-primary">Register</a>
 			</div>
 		</div>
 
@@ -55,9 +55,9 @@
 					<ul class="nav navbar-nav">
 						<li><a href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
-						<li><a href="reservations.html">Reservations</a></li>
+						<li><a href="reservations.php">Reservations</a></li>
 						<li><a href="rates.html">Rates</a></li>
-						<li><a href="enquiries.html">Enquiries</a></li>
+						<li><a href="enquiries.php">Enquiries</a></li>
 						<li><a href="contact-us.html">Contact Us</a></li>
 					</ul>
 				</div>
@@ -65,7 +65,7 @@
 		
 		<!-- Body header -->
 		<center><h1>Take a Tour!</h1>
-		<h3>placeholder text placeholder text placeholder text placeholder text</h3></center>
+		<h3>Navigate around and see what we offer</h3></center>
 
 
 		<!--Slideshow -->
