--- a/contact-us.html
+++ b/contact-us.html
@@ -36,7 +36,7 @@
 
 			<!--Booking Button-->
 			<div id="bookings" class="pull-right">
-				<a href="reservations.html" class="btn btn-primary">Book Now</a>
+				<a href="reservations.php" class="btn btn-primary">Book Now</a>
 			</div>
 		</div>
 
@@ -54,9 +54,9 @@
 					<ul class="nav navbar-nav">
 						<li><a href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
-						<li><a href="reservations.html">Reservations</a></li>
+						<li><a href="reservations.php">Reservations</a></li>
 						<li><a href="rates.html">Rates</a></li>
-						<li><a href="enquiries.html">Enquiries</a></li>
+						<li><a href="enquiries.php">Enquiries</a></li>
 						<li><a href="contact-us.html">Contact Us</a></li>
 					</ul>
 				</div>
@@ -70,7 +70,7 @@
 		<div id="maincontent" >
 			<!-- break -->
 			<h3>Booking Enquiries</h3>
-			<p>Please submit all enquiries using the <a href="enquiries.html"> enquiries </a> form. </p>
+			<p>Please submit all enquiries using the <a href="enquiries.php"> enquiries </a> form. </p>
 		</br></br>
 
 		<h3>For all other enquiries contact us </h3>
